# drf-playground

./: README.md  manage.py  pyproject.toml
drf_playground/: asgi.py  settings.py  urls.py  wsgi.py
snippets/: models.py  permissions.py  serializers.py  urls.py  views.py
snippets/migrations/: 0001_initial.py
